devscripts (2.9.21) UNRELEASED; urgency=low

  * bts: reportspam/spamreport can now take multiple bug numbers
  * bts: add support for forcemerge (Closes: #369050, #380041)
  * bts: always include "# Automatically generated email" message (thanks
    to Justin Pryzby for spotting this)
  * bts: chdir back to original directory after downloading files (Closes:
    #372546)
  * dd-list: treat lists.alioth.debian.org like lists.debian.org (Closes:
    #373809)
  * debchange: clarified name of changelog file in more error/warning
    messages (see bug#368961)
  * debchange: can specify a NEWS file to edit (still defaults to
    debian/NEWS) (Closes: #384676)
  * dpkg-genbuilddeps: clean up if statement (Closes: #365372)
  * who-depends: convert output into locale charset (Closes: #384835)

 -- Julian Gilbey <jdg@debian.org>  Sun, 27 Aug 2006 21:31:40 +0100

devscripts (2.9.20) unstable; urgency=low

  * debuild: set DEB_{BUILD,HOST}_* variables as dpkg-buildpackage does
    (Closes: #364256)
  * debuild: improve missing .orig.tar.gz warning
  * uscan: mention upgrading points in the manpage.
  * uupdate: allow upstream version numbers to use A-Z (Closes:#367055)

 -- Julian Gilbey <jdg@debian.org>  Wed, 17 May 2006 07:27:17 +0100

devscripts (2.9.19) unstable; urgency=low

  * debuild: fix -I and -i option handling (Closes: #363368)

 -- Julian Gilbey <jdg@debian.org>  Thu, 20 Apr 2006 21:41:51 +0100

devscripts (2.9.18) unstable; urgency=low

  * uscan: fix parsing howler: uscan would never work like this - oops!
    (Closes: #363338)

 -- Julian Gilbey <jdg@debian.org>  Tue, 18 Apr 2006 17:58:20 +0100

devscripts (2.9.17) unstable; urgency=low

  [ Julian Gilbey ]
  * several Perl scripts: make sure we set the SIGPIPE handler before
    doing an open '-|'
  * bts: actually support the --sendmail option rather than just say we
    do! (Closes: #293715)
  * bts: fix URI in manpage (Closes: #360783)
  * bts: fix unblock NNNNN by|with NNNNN handling (Closes: #361029)